@@ -186,7 +186,7 @@ implicit-assign-dynamic-var:	no
 device-mnemonics:		no
 
 # full clauses in XML PARSE - and adjusted XML-EVENTs
-xml-parse-xmlss:		no # not supported at all
+xml-parse-xmlss:		no # only XMLPARSE"COMPAT" way
 
 # What rules to apply to SCREEN SECTION items clauses
 screen-section-rules:		std
